Add OCI/TA variant of the tkn-bundle Task
Resolves: https://issues.redhat.com/browse/EC-979

--- a/task/tkn-bundle/0.1/tkn-bundle.yaml
+++ b/task/tkn-bundle/0.1/tkn-bundle.yaml
@@ -72,23 +72,23 @@ spec:
         if [[ -d "$(workspaces.source.path)/${path}" ]]; then
           # for directories look for any .yaml or .yml files
           paths+=(
-            $(workspaces.source.path)/${path}/**/*.yaml
-            $(workspaces.source.path)/${path}/**/*.yml
+            "$(workspaces.source.path)/${path}"/**/*.yaml
+            "$(workspaces.source.path)/${path}"/**/*.yml
           )
         else
           # for files add the file to the collected paths
           paths+=("${path}")
         fi
         if [[ $neg == 0 ]]; then
-          # collect curent paths to FILES
+          # collect current paths to FILES
           FILES+=("${paths[@]}")
         else
           if [[ ${#PATHS[@]} -eq 1 ]]; then
             # single negative path provided, first include everything then
             # subtract the negative elements
             FILES=(
-              $(workspaces.source.path)/**/*.yaml
-              $(workspaces.source.path)/**/*.yml
+              "$(workspaces.source.path)"/**/*.yaml
+              "$(workspaces.source.path)"/**/*.yml
             )
           fi
           for p in "${paths[@]}"; do
@@ -132,12 +132,13 @@ spec:
         && exit 1
       exec 3>&1;
 
+      # shellcheck disable=SC2046
       OUT="$(tkn bundle push "$IMAGE" \
         $(printf ' -f %s' "${FILES[@]}") \
         |tee /proc/self/fd/3)"
-      echo -n "$IMAGE" > $(results.IMAGE_URL.path)
+      echo -n "$IMAGE" > "$(results.IMAGE_URL.path)"
       digest="${OUT#*Pushed Tekton Bundle to *@}"
-      echo -n "${digest}" > $(results.IMAGE_DIGEST.path)
+      echo -n "${digest}" > "$(results.IMAGE_DIGEST.path)"
       echo -n "${IMAGE}@${digest}" > "$(results.IMAGE_REF.path)"
 
       # cleanup task file
