--- a/task/clamav-scan/0.1/clamav-scan.yaml
+++ b/task/clamav-scan/0.1/clamav-scan.yaml
@@ -100,7 +100,7 @@ spec:
             interval=20  # interval between checks in seconds
             elapsed=0
 
-            until [ -f /var/lib/clamav/daily.cvd ] || [ "$elapsed" -ge "$timeout" ]; do
+            until [ -f /var/lib/clamav/daily.cld ] || [ "$elapsed" -ge "$timeout" ]; do
               if (( elapsed % 60 == 0 )) && [ $elapsed -ne 0 ]; then
                 echo "Waiting for database to be downloaded... Elapsed time: $((elapsed / 60)) minute(s)"
               fi
@@ -108,8 +108,8 @@ spec:
               elapsed=$((elapsed + interval))
             done
 
-            if [ ! -f /var/lib/clamav/daily.cvd ]; then
-              echo "Error: Timed out waiting for daily.cvd after $((elapsed / 60)) minute(s)."
+            if [ ! -f /var/lib/clamav/daily.cld ]; then
+              echo "Error: Timed out waiting for daily.cld after $((elapsed / 60)) minute(s)."
               exit 1
             fi
 
@@ -123,7 +123,7 @@ spec:
               --alert-phishing-ssl=yes --alert-phishing-cloak=yes --alert-partition-intersection=yes \
               | tee /work/logs/clamscan-result-$arch.log || true
 
-            db_version=$(sigtool --info /var/lib/clamav/daily.cvd | grep 'Version')
+            db_version=$(sigtool --info /var/lib/clamav/daily.cld | grep 'Version')
             echo "Executed-on: Scan was executed on clamscan version - $(clamscan --version) Database $db_version" | tee -a "/work/logs/clamscan-result-$arch.log"
 
             digests_processed+=("\"$arch_sha\"")
