--- a/task/git-clone-oci-ta/0.1/git-clone-oci-ta.yaml
+++ b/task/git-clone-oci-ta/0.1/git-clone-oci-ta.yaml
@@ -99,6 +99,12 @@ spec:
       type: string
       default: "false"
   results:
+    - name: CHAINS-GIT_COMMIT
+      description: The precise commit SHA that was fetched by this Task. This
+        result uses Chains type hinting to include in the provenance.
+    - name: CHAINS-GIT_URL
+      description: The precise URL that was fetched by this Task. This result
+        uses Chains type hinting to include in the provenance.
     - name: SOURCE_ARTIFACT
       description: The Trusted Artifact URI pointing to the artifact with
         the application source code.
@@ -247,8 +253,10 @@ spec:
           exit "${EXIT_CODE}"
         fi
         printf "%s" "${RESULT_SHA}" >"$(results.commit.path)"
+        printf "%s" "${RESULT_SHA}" >"$(results.CHAINS-GIT_COMMIT.path)"
         printf "%s" "${RESULT_SHA_SHORT}" >"$(results.short-commit.path)"
         printf "%s" "${PARAM_URL}" >"$(results.url.path)"
+        printf "%s" "${PARAM_URL}" >"$(results.CHAINS-GIT_URL.path)"
         printf "%s" "$(git log -1 --pretty=%ct)" >"$(results.commit-timestamp.path)"
 
         if [ "${PARAM_FETCH_TAGS}" = "true" ]; then
