fix: correct 'enteprise' to 'enterprise'

--- a/task/update-infra-deployments/0.1/update-infra-deployments.yaml
+++ b/task/update-infra-deployments/0.1/update-infra-deployments.yaml
@@ -148,7 +148,7 @@ spec:
         logger = logging.getLogger("updater")
 
         EXPIRE_MINUTES_AS_SECONDS = int(os.environ.get('GITHUBAPP_TOKEN_EXPIRATION_MINUTES', 10)) * 60
-        # TODO support github enteprise
+        # TODO support github enterprise
         GITHUB_API_URL = os.environ["GITHUB_API_URL"]
 
         ORIGIN_REPO = os.environ["ORIGIN_REPO"]
