--- a/stepactions/eaas-get-ephemeral-cluster-credentials/0.1/eaas-get-ephemeral-cluster-credentials.yaml
+++ b/stepactions/eaas-get-ephemeral-cluster-credentials/0.1/eaas-get-ephemeral-cluster-credentials.yaml
@@ -78,6 +78,7 @@ spec:
     API_SERVER_URL=$("${OC[@]}" get cti "$CLUSTER_NAME" -o=jsonpath='{.status.apiServerURL}')
     echo "API Server URL: $API_SERVER_URL"
     echo -n "$API_SERVER_URL" > "$(step.results.apiServerURL.path)"
-    CONSOLE_URL=https://$("${OC[@]}" get route console -n openshift-console -o go-template --template="{{.spec.host}}")
+    export KUBECONFIG=$CLUSTER_KUBECONFIG
+    CONSOLE_URL=https://$(oc get route console -n openshift-console -o go-template --template="{{.spec.host}}")
     echo "Console URL: $CONSOLE_URL"
     echo -n "$CONSOLE_URL" > "$(step.results.consoleURL.path)"
