Improve listing changed files in a commit
We ended up with revision 3b215506e4ecc70c287785eeda9dbf8a4350b2fe for
several Tasks in the acceptable bundles, seems that the `git log` method
was also listing the files that were brought in by merging the main
branch onto the pull request branch.

This switches to using GitHub CLI to search for a merged pull request
that contains the top commit (`$REVISION`), and then lists the changed
files in that pull request.

This version uses the GitHub Token from the `{{git_auth_secret}}` secret
created by Pipelines as code.

This should contain only the list of files that were changed in the pull
request and not any changed files in a merge commit.

Reference: https://issues.redhat.com/browse/EC-1015

--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -148,6 +148,11 @@ spec:
                 value: "$(params.revision)"
               - name: GIT_URL
                 value: "$(params.git-url)"
+              - name: GITHUB_TOKEN
+                valueFrom:
+                  secretKeyRef:
+                    name: "{{ git_auth_secret }}"
+                    key: "git-provider-token"
               script: |
                 #!/bin/bash
                 set -euo pipefail
