New task to build the buildpack builder image.
Signed-off-by: cmoulliard <cmoulliard@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -113,6 +113,9 @@
 /task/oci-copy          @ralphbean
 /task/oci-copy-oci-ta   @ralphbean
 
+# renovate groupName=buildpack
+/task/build-paketo-builder-oci-ta @cmoulliard
+
 # These are auto-generated and often require changes when tasks change.
 # Allow anyone with write access to approve the changes.
 /pipelines/*/README.md
