Use revision when pull_request_number is missing
It seems that the `pull_request_number` might not be defined when
running checks on a PR in merge queue. So if the value is empty we can
try looking up the pull request number by searching for the commit that
contained it.

--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -40,8 +40,8 @@ spec:
         taskRef:
           name: task-switchboard
         params:
-          - name: pr_number
-            value: "{{ pull_request_number }}"
+          - name: revision
+            value: $(params.revision)
           - name: utils_image
             value: quay.io/konflux-ci/pull-request-builds:appstudio-utils-{{revision}}
           - name: expressions
