feat: add fips-operator-check task
Refers to CVP-4333. This task uses the check-payload tool to verify if
an operator bundle image is FIPS compliant.It utilizes Tekton stepAction
because the code will be reused for checking FBC fragments in the
fbc-validation check.

Signed-off-by: Yashvardhan Nanavati <yashn@bu.edu>

--- a/renovate.json
+++ b/renovate.json
@@ -80,6 +80,7 @@
     {
       "groupName": "integration",
       "matchFileNames": [
+        "stepactions/fips-operator-check-step-action/**",
         "task/clair-scan/**",
         "task/clamav-scan/**",
         "task/coverity-availability-check-oci-ta/**",
@@ -87,6 +88,8 @@
         "task/deprecated-image-check/**",
         "task/fbc-related-image-check/**",
         "task/fbc-validation/**",
+        "task/fips-operator-bundle-check-oci-ta/**",
+        "task/fips-operator-bundle-check/**",
         "task/inspect-image/**",
         "task/sast-coverity-check-oci-ta/**",
         "task/sast-coverity-check/**",
