CODEOWNERS: exclude pipelines/*/README.md
Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -94,3 +94,7 @@
 
 /task/oci-copy          @ralphbean
 /task/oci-copy-oci-ta   @ralphbean
+
+# These are auto-generated and often require changes when tasks change.
+# Allow anyone with write access to approve the changes.
+/pipelines/*/README.md
